--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 [B]2.0.1[/B] 
 * Fixed many issues which prevented the add-on from loading/functioning correctly on Android (and possibly other platforms).
-* Collection TV is now hidden again when browsing add-ons
+* Collection TV is now hidden again when browsing other add-ons
 
 [B]2.0.0 MAJOR UPDATE[/B]:
 
