--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,27 @@
+[B]2.1.0[/B] 
+* Sort video lists on the fly in 13 different ways:
+    Date
+    Views
+    Duration
+    Original Position (one video from each source)
+    Shuffle
+    Source Title
+    Video Title
+    Rating
+    Likes
+    Dislikes
+    Comment Count
+    Play Count
+    Last Played
+	
+* Set collection feed sort permanently
+* Secondary sort option for collection feed	
+* Counts can now show all the different sorting values(as opposed to only views in previous versions)
+* Count texts are now much shorter and displayed in a more human readable way
+* Secondary count
+* Counts can now be aligned for a cleaner look
+* Queue all videos when playing video inside a source
+
 [B]2.0.1[/B] 
 * Fixed many issues which prevented the add-on from loading/functioning correctly on Android (and possibly other platforms).
 * Collection TV is now hidden again when browsing other add-ons
