--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]2.1.1[/B] 
+	Fixed issue with icons showing stretched in some skins
+	
 [B]2.1.0[/B] 
 * Sort video lists on the fly in 13 different ways:
     Date
