Added original order sorting to kodi folders
Kodi folders were sorted at first by original order but the plugin would
claim they are sorted by date. Now it shows them as sorted by original
order and it is also possible to get back to the original sorting at any
time. Also created 3 different cache sort files for feed/folders/youtube
since having all of them use the same file caused some errors and the
script could actually fail.

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -290,6 +290,10 @@ msgctxt "#30506"
 msgid "Sources Text"
 msgstr ""
 
+msgctxt "#30507"
+msgid "Folders"
+msgstr ""
+
 
 
 #general tab
@@ -479,9 +483,22 @@ msgstr ""
 
 
 #Sources Text Tab
-msgctxt "#30590"
+msgctxt "#30585"
 msgid "Source Title"
 msgstr ""
+
+
+#Folders Tab
+msgctxt "#30590"
+msgid "Estimate video dates"
+msgstr ""
+
+#Folders Tab
+msgctxt "#30591"
+msgid "Set Individually"
+msgstr ""
+
+
 
 
 
@@ -518,6 +535,14 @@ msgstr ""
 
 msgctxt "#30607"
 msgid "None"
+msgstr ""
+
+msgctxt "#30608"
+msgid "Yes"
+msgstr ""
+
+msgctxt "#30609"
+msgid "No"
 msgstr ""
 
 
@@ -613,6 +638,10 @@ msgstr ""
 
 msgctxt "#30633"
 msgid "Last Played"
+msgstr ""
+
+msgctxt "#30634"
+msgid "Original"
 msgstr ""
 
 
